More fixes of lints